# agent-immune

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: reusable-build.yml  stage-release-publish.yml  stage-test.yml
agent-immune/: Cargo.toml
agent-immune/src/: config.rs  firecracker.rs  jetstream_consumer.rs  leak_check.rs  lib.rs  main.rs  mcp_server.rs  sandbox.rs  scanner.rs  seccomp.rs  serve.rs
docs/architecture/: README.md
scripts/: build-release-macos.sh  install.sh  sign-macos.sh  sync-local-release.sh
